Fixed some overlapping css :sparkles:

--- a/client/src/assets/css/launch.css
+++ b/client/src/assets/css/launch.css
@@ -38,7 +38,7 @@ ol {
     padding-bottom: 38px !important;
 }
 
-h3 {
+.launch-h3 {
     color: #000C3E;
 }
 
